--- a/RD3/Lang/Lang.zh-CN.xaml
+++ b/RD3/Lang/Lang.zh-CN.xaml
@@ -13,15 +13,15 @@
     <system:String x:Key="Trend">曲线</system:String>
     <system:String x:Key="Overview">总览</system:String>
     <system:String x:Key="Running">运行中</system:String>
-    <system:String x:Key="ReactorName">反应器名称</system:String>
-    <system:String x:Key="ReactorID">反应器ID</system:String>
-    <system:String x:Key="SerialNumber">序列号</system:String>
+    <system:String x:Key="Reactor name">反应器名称</system:String>
+    <system:String x:Key="Reactor ID">反应器ID</system:String>
+    <system:String x:Key="Serial number">序列号</system:String>
     <system:String x:Key="Type">类型</system:String>
     <system:String x:Key="Status">状态</system:String>
-    <system:String x:Key="BatchID">批号（ID）</system:String>
-    <system:String x:Key="BatchName">批号名称</system:String>
-    <system:String x:Key="AffiliatedProject">所属项目</system:String>
-    <system:String x:Key="RunningTime">运行时间</system:String>
+    <system:String x:Key="Batch ID">批号（ID）</system:String>
+    <system:String x:Key="Batch name">批号名称</system:String>
+    <system:String x:Key="Affiliated project">所属项目</system:String>
+    <system:String x:Key="Running time">运行时间</system:String>
     <system:String x:Key="Pause">暂停</system:String>
     <system:String x:Key="Sample">取样</system:String>
     <system:String x:Key="Log">录入数据</system:String>
@@ -35,23 +35,22 @@
     <system:String x:Key="Feed">补料</system:String>
     <system:String x:Key="Disable">禁用</system:String>
     <system:String x:Key="AF">消泡</system:String>
-    <system:String x:Key="AccountsManage">账户管理</system:String>
     <system:String x:Key="Search">搜索</system:String>
     <system:String x:Key="Add">新建</system:String>
     <system:String x:Key="Select">选择</system:String>
     <system:String x:Key="Username">用户名</system:String>
-    <system:String x:Key="CreateTime">创建时间</system:String>
-    <system:String x:Key="UpdateTime">上次登录</system:String>
+    <system:String x:Key="Create Time">创建时间</system:String>
+    <system:String x:Key="Update Time">更新时间</system:String>
     <system:String x:Key="Creator">创建者</system:String>
-    <system:String x:Key="UserType">账户类型</system:String>
-    <system:String x:Key="SetValue">设定值</system:String>
+    <system:String x:Key="User type">账户类型</system:String>
+    <system:String x:Key="Set value">设定值</system:String>
     <system:String x:Key="AssociativeModules">关联模块</system:String>
     <system:String x:Key="Alarm">报警设置</system:String>
     <system:String x:Key="DBand">死区</system:String>
     <system:String x:Key="OP">输出</system:String>
-    <system:String x:Key="LimitRange">限制范围</system:String>
+    <system:String x:Key="Limit range">限制范围</system:String>
     <system:String x:Key="AssociativeController">关联控制器</system:String>
-    <system:String x:Key="TimeSeries">顺序控制</system:String>
+    <system:String x:Key="Time series">顺序控制</system:String>
     <system:String x:Key="Import">导入</system:String>
     <system:String x:Key="Save">导出</system:String>
     <system:String x:Key="Loop">循环</system:String>
@@ -63,17 +62,17 @@
     <system:String x:Key="Name">名称</system:String>
     <system:String x:Key="Account">账户</system:String>
     <system:String x:Key="Client">客户</system:String>
-    <system:String x:Key="StartDate">开始日期</system:String>
-    <system:String x:Key="CloseDate">结束日期</system:String>
-    <system:String x:Key="CreateDate">创建时期</system:String>
+    <system:String x:Key="Start Date">开始日期</system:String>
+    <system:String x:Key="Close Date">结束日期</system:String>
+    <system:String x:Key="Create Date">创建时期</system:String>
     <system:String x:Key="Description">备注</system:String>
     <system:String x:Key="Create">新建</system:String>
-    <system:String x:Key="BatchesManage">批次管理</system:String>
+    <system:String x:Key="Batch Manage">批次管理</system:String>
     <system:String x:Key="Compare">对比</system:String>
     <system:String x:Key="Export">导出</system:String>
     <system:String x:Key="Reactor">反应器/设备</system:String>
-    <system:String x:Key="StartTime">开始时间</system:String>
-    <system:String x:Key="CloseTime">结束时间</system:String>
+    <system:String x:Key="Start Time">开始时间</system:String>
+    <system:String x:Key="Close Time">结束时间</system:String>
     <system:String x:Key="Devices">设备选择</system:String>
     <system:String x:Key="Operation">设定操作</system:String>
     <system:String x:Key="Steps">步骤</system:String>
@@ -97,7 +96,7 @@
     <system:String x:Key="O2">氧气</system:String>
     <system:String x:Key="N2">氮气</system:String>
     <system:String x:Key="Agit">转速</system:String>
-    <system:String x:Key="DO">溶氧</system:String>
+    <system:String x:Key="DO">DO</system:String>
     <system:String x:Key="Device">设备</system:String>
     <system:String x:Key="Liquid">加液</system:String>
     <system:String x:Key="Harvest">收获</system:String>
@@ -109,4 +108,10 @@
     <system:String x:Key=" Do as unscheduled action">增加记录</system:String>
     <system:String x:Key="Add Liquid">加液</system:String>
     <system:String x:Key="Load Setting">加载配置</system:String>
+    <system:String x:Key="Account manage">管理用户</system:String>
+    <system:String x:Key="Switch account">切换用户</system:String>
+    <system:String x:Key="Log out">退出登录</system:String>
+    <system:String x:Key="History">历史</system:String>
+    <system:String x:Key="Template">模板</system:String>
+    <system:String x:Key="Idle">空闲</system:String>
 </ResourceDictionary>
