--- a/RD3/Views/UserView.xaml
+++ b/RD3/Views/UserView.xaml
@@ -14,7 +14,6 @@
     Width="920"
     Height="645"
     d:DataContext="{d:DesignInstance Type=viewmodels:UserViewModel}"
-    Background="{StaticResource BackGroundBrush}"
     mc:Ignorable="d">
     <prism:Dialog.WindowStyle>
         <Style TargetType="Window">
@@ -33,10 +32,7 @@
             <Setter Property="Opacity" Value="1" />
         </Style>
     </prism:Dialog.WindowStyle>
-    <Border
-        BorderBrush="{StaticResource PrimaryBorderBrush}"
-        CornerRadius="8"
-        Effect="{StaticResource MaterialDesignElevationShadow1}">
+    <Border Style="{StaticResource BorderCard}">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="40" />
@@ -49,13 +45,11 @@
                 Width="40"
                 Height="40"
                 HorizontalAlignment="Right"
-                Background="Transparent"
                 BorderThickness="0"
                 Command="{Binding CloseCommand}">
                 <materialDesign:PackIcon
                     Width="24"
                     Height="24"
-                    Foreground="Gray"
                     Kind="Close" />
             </Button>
             <Grid Grid.Row="1">
@@ -84,6 +78,7 @@
             <Grid Grid.Row="2" Margin="35">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="50" />
+                    <RowDefinition Height="20" />
                     <RowDefinition Height="*" />
                     <RowDefinition Height="40" />
                 </Grid.RowDefinitions>
@@ -92,12 +87,10 @@
                         <ColumnDefinition Width="auto" />
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="auto" />
-                        <ColumnDefinition Width="auto" />
                     </Grid.ColumnDefinitions>
                     <hc:SearchBar
                         Width="220"
-                        Height="30"
-                        Margin="5"
+                        Height="45"
                         HorizontalAlignment="Left"
                         hc:InfoElement.Placeholder="{ex:Language Key='Searach'}"
                         hc:InfoElement.ShowClearButton="True"
@@ -108,29 +101,28 @@
                             </hc:EventTrigger>
                         </hc:Interaction.Triggers>
                     </hc:SearchBar>
-                    <Button
-                        Grid.Column="1"
-                        Height="30"
-                        Margin="5"
-                        HorizontalAlignment="Right"
-                        VerticalAlignment="Center"
-                        hc:BorderElement.CornerRadius="8"
-                        hc:IconElement.Geometry="{StaticResource AddGeometry}"
-                        Background="{StaticResource PrimaryBrush}"
-                        BorderBrush="{StaticResource PrimaryBrush}"
-                        Command="{Binding AddUserCommand}"
-                        Content="{ex:Language Key='Add'}"
-                        Foreground="WhiteSmoke" />
-                    <ComboBox
-                        Grid.Column="3"
-                        Width="150"
-                        Height="30"
-                        Margin="5"
-                        hc:InfoElement.Placeholder="{ex:Language Key='Select'}" />
+                    <hc:UniformSpacingPanel Grid.Column="2" Spacing="10">
+                        <Button
+                            Height="35"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center"
+                            hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
+                            hc:IconElement.Geometry="{StaticResource AddGeometry}"
+                            Background="{StaticResource PrimaryBrush}"
+                            BorderBrush="{StaticResource PrimaryBrush}"
+                            Command="{Binding AddUserCommand}"
+                            Content="{ex:Language Key='Add'}"
+                            Foreground="WhiteSmoke" />
+                        <ComboBox
+                            Width="150"
+                            Height="35"
+                            hc:InfoElement.Placeholder="{ex:Language Key='Select'}" />
+                    </hc:UniformSpacingPanel>
+
                 </Grid>
                 <DataGrid
                     Name="dataGrid"
-                    Grid.Row="1"
+                    Grid.Row="2"
                     hc:DataGridAttach.CanUnselectAllWithBlankArea="True"
                     hc:DataGridAttach.ShowSelectAllButton="False"
                     AutoGenerateColumns="False"
@@ -210,7 +202,7 @@
                     </DataGrid.Columns>
                 </DataGrid>
                 <hc:Pagination
-                    Grid.Row="2"
+                    Grid.Row="3"
                     HorizontalAlignment="Right"
                     VerticalAlignment="Center"
                     IsJumpEnabled="True"
